<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/search_label"
        android:textColorHint="@color/silver"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_news_item"
        android:textColor="@color/mineShaft"
        android:imeOptions="actionSearch"
        android:textSize="14dp"/>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingRight="20dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:text="@string/bussiness_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mineShaft"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/background_news_item"
                android:id="@+id/business_button"/>
            <TextView
                android:text="@string/entertaiment_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mineShaft"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_toRightOf="@id/business_button"
                android:layout_marginLeft="10dp"
                android:background="@drawable/background_news_item"
                android:id="@+id/entertainment_button"/>
            <TextView
                android:text="@string/general_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mineShaft"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_toRightOf="@id/entertainment_button"
                android:layout_marginLeft="10dp"
                android:background="@drawable/background_news_item"
                android:id="@+id/general_button"/>
            <TextView
                android:text="@string/health_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mineShaft"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_below="@id/business_button"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_news_item"
                android:id="@+id/health_button"/>
            <TextView
                android:text="@string/science_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mineShaft"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_toEndOf="@id/health_button"
                android:layout_below="@id/business_button"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_news_item"
                android:id="@+id/science_button"
                android:layout_toRightOf="@id/health_button" />
            <TextView
                android:text="@string/sports_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mineShaft"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_below="@id/business_button"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_news_item"
                android:id="@+id/sports_button"
                android:layout_toRightOf="@id/science_button" />
            <TextView
                android:text="@string/technology_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mineShaft"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_below="@id/business_button"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/background_news_item"
                android:id="@+id/technology_button"
                android:layout_toRightOf="@id/sports_button" />
        </RelativeLayout>

    </HorizontalScrollView>
</LinearLayout>